fix blockquote margins and nudge down text size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,8 +217,12 @@ li:before {
 
 @media (max-width: 480px) {
   body {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.4;
+  }
+
+  blockquote {
+    margin-right: 0;
   }
 
   .main {
